--- a/webhotels/views/flcreatorder.pug
+++ b/webhotels/views/flcreatorder.pug
@@ -21,11 +21,11 @@ form(action='/bookFind', target='creatord' method='post')
     br
     label
       | Количество мест в номер:
-      input(type='text', placeholder='1', name = 'Cap')
+      input(type='text', value='1', name = 'Cap')
     br
     label
       | Цена за номер до:
-      input(type='text', placeholder='999999', name='Cost')
+      input(type='text', value='999999', name='Cost')
     br
     label
       | Удобства в номере
