--- a/webhotels/views/ltdoneorder.pug
+++ b/webhotels/views/ltdoneorder.pug
@@ -7,5 +7,12 @@ table(border='1', bordercolor='grey', width='100%', cellpadding='10')
     th Дата заказа
     th Статус
     th Номер
+    th Логин клиента
   tr
-    td(colspan='3') Заказы не найдены
+    each vr in noms
+      tr
+        td(width='10%', valign='middle', align='middle') #{vr[0].value}
+        td(width='10%', valign='middle', align='middle') #{vr[1].value}
+        td(width='10%', valign='middle', align='middle') #{vr[2].value}
+        td(width='10%', valign='middle', align='middle') #{vr[3].value}
+    //td(colspan='3') Заказы не найдены
