--- a/webhotels/views/ltnomer.pug
+++ b/webhotels/views/ltnomer.pug
@@ -15,6 +15,8 @@ table(border='1', bordercolor='grey', width='100%', cellpadding='5')
     td(width='10%', valign='middle', align='middle') #{vr[3].value}
     td(width='10%', valign='middle', align='middle') #{vr[4].value}
     td(width='10%', valign='middle', align='middle') #{vr[5].value}
+    //if (vr[2].value == NaN)
+      //  td(colspan='3') Заказы не найдены
 // if vr.filtr == 1
 //  tr
 //   td(width='10%', valign='middle', align='left')
