--- a/webhotels/views/neworder.pug
+++ b/webhotels/views/neworder.pug
@@ -10,7 +10,7 @@ html
   padding:15px;
   }
  body
-  form(action='/commBron', target='nomer', method='post')
+  form(action='/commBron', target='creatord', method='post')
       each vr in noms
        label
         | ID номера:
